--- a/biopeptix.html
+++ b/biopeptix.html
@@ -6,23 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Lato:wght@300;400&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="styles.css?v=4">
-  
-  <style>
-    .add-to-cart-btn {
-      background-color: black;
-      color: white;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 20px;
-      margin-top: 10px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .add-to-cart-btn:hover {
-      background-color: #333;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -30,7 +14,7 @@
 
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Pédant Cosmetic Logo" style="height:60px;">
+        <a href="index.html"><img src="images/logo.png" alt="PÉDANT Cosmetic Logo"></a>
       </div>
 
       <nav>
@@ -38,13 +22,13 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="catalog.html">CATALOG</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="#contact">CONTACT</a></li>
-          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
           <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
           <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
+          <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
         </ul>
       </nav>
     </header>
@@ -57,14 +41,14 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="auth.js"></script>
-  <script src="products.js"></script>
+  <script src="JavaScript/auth.js"></script>
+  <script src="JavaScript/products.js"></script>
   
-  <script src="cart.js?v=4"></script> 
+  <script src="JavaScript/cart.js?v=4"></script> 
   
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      renderProducts('dermalosophy');
+      renderProducts('biopeptix');
     });
   </script>
 </body>
