--- a/cart.html
+++ b/cart.html
@@ -6,63 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Lato:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    /* עיצוב ספציפי לעגלה */
-    .cart-page-title {
-      text-align: center;
-      margin: 40px 0 20px;
-      font-size: 32px;
-      font-family: "Playfair Display", serif;
-    }
-    .cart-actions {
-      display: flex;
-      gap: 15px;
-      margin-top: 20px;
-      justify-content: flex-end;
-    }
-    .btn-checkout {
-      background-color: #000;
-      color: #fff;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 24px;
-      cursor: pointer;
-      font-size: 16px;
-      text-decoration: none;
-    }
-    .btn-clear {
-      background-color: transparent;
-      color: #555;
-      padding: 12px 24px;
-      border: 1px solid #ccc;
-      border-radius: 24px;
-      cursor: pointer;
-      font-size: 16px;
-    }
-    .cart-summary-box {
-        margin-top: 30px;
-        text-align: left;
-        padding: 20px;
-        background: #f9f9f9;
-        border-radius: 10px;
-        max-width: 400px;
-        margin-right: auto; /* הצמדה לשמאל בעברית */
-    }
-    .summary-row {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 10px;
-      font-family: 'Lato', sans-serif;
-    }
-    .summary-row.total {
-      font-weight: bold;
-      font-size: 1.2rem;
-      border-top: 1px solid #ddd;
-      padding-top: 10px;
-      margin-top: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -71,7 +15,7 @@
 
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Pédant Cosmetic Logo">
+        <a href="index.html"><img src="images/logo.png" alt="PÉDANT Cosmetic Logo"></a>
       </div>
 
       <nav>
@@ -79,13 +23,13 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="catalog.html">CATALOG</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">CONTACT</a></li>
-          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
           <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
           <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
-          <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
+          <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
         </ul>
       </nav>
     </header>
@@ -130,7 +74,7 @@
     <footer class="site-footer">
       <div class="footer-wrapper">
         <div class="footer-logo-area">
-          <img src="logo.png" class="footer-logo" alt="Pédant Cosmetic Logo">
+          <img src="images/logo.png" class="footer-logo" alt="Pédant Cosmetic Logo">
         </div>
         <div class="footer-line"></div>
         <div class="footer-columns">
@@ -146,7 +90,7 @@
         </div>
         <div class="footer-social">
           <a href="https://www.instagram.com/merav_lavie_pedant?igsh=NHlvdTgxNm9peXd6" target="_blank">
-            <img src="instagram.png" class="footer-instagram" alt="Instagram">
+            <img src="images/instagram.png" class="footer-instagram" alt="Instagram">
           </a>
         </div>
       </div>
@@ -155,9 +99,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="auth.js"></script>
-  <script src="products.js"></script> 
-  <script src="cart.js"></script>
+  <script src="JavaScript/auth.js"></script>
+  <script src="JavaScript/products.js"></script> 
+  <script src="JavaScript/cart.js"></script>
 
 </body>
 </html>
