--- a/contact.html
+++ b/contact.html
@@ -8,188 +8,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
-
-  <style>
-    /* --- הגדרות בסיס --- */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-
-    body {
-      font-family: 'Lato', sans-serif;
-      font-weight: 300; /* טקסט דק */
-      background-color: #ffffff;
-      color: #000;
-    }
-
-    a { text-decoration: none; color: inherit; transition: opacity 0.3s; }
-    a:hover { opacity: 0.6; }
-
-    /* --- HEADER (זהה לשאר האתר) --- */
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 25px 40px;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-    
-    .logo img { height: 50px; width: auto; display: block; }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 30px;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav ul li a {
-      font-size: 13px;
-      letter-spacing: 1.5px;
-      text-transform: uppercase;
-      font-weight: 400;
-      color: #000;
-    }
-    
-    .cart-icon { width: 18px; height: auto; vertical-align: middle; }
-
-
-    /* --- CONTACT FORM STYLE (בדיוק כמו בתמונה) --- */
-    .contact-wrapper {
-      max-width: 900px;
-      margin: 80px auto;
-      padding: 0 40px;
-    }
-
-    /* כותרת */
-    .contact-title {
-      font-family: 'Playfair Display', serif;
-      font-size: 48px;
-      font-weight: 400;
-      margin-bottom: 60px;
-      color: #000;
-    }
-
-    /* טופס */
-    .contact-form {
-      display: flex;
-      flex-direction: column;
-      gap: 50px; /* רווח גדול בין השורות */
-    }
-
-    /* שורה של שני שדות (שם פרטי + משפחה) */
-    .form-row-split {
-      display: flex;
-      gap: 50px;
-    }
-
-    .form-group {
-      flex: 1;
-      position: relative;
-    }
-
-    /* לייבל (הטקסט מעל הקו) */
-    .form-label {
-      display: block;
-      font-size: 15px;
-      color: #000;
-      margin-bottom: 10px;
-      font-family: 'Lato', sans-serif;
-      font-weight: 400; /* מעט יותר מודגש מהשאר */
-    }
-
-    /* שדה הקלט - רק קו תחתון */
-    .form-input {
-      width: 100%;
-      border: none;
-      border-bottom: 1.5px solid #000; /* הקו השחור */
-      padding: 10px 0;
-      font-family: 'Lato', sans-serif;
-      font-size: 16px;
-      background: transparent;
-      outline: none;
-      transition: border-color 0.3s;
-    }
-
-    .form-input:focus {
-      border-bottom-width: 3px; /* מדגיש את הקו בלחיצה */
-    }
-
-    /* אזור ה-Checkbox */
-    .checkbox-group {
-      display: flex;
-      align-items: center;
-      justify-content: flex-end; /* מיושר לימין כמו בתמונה */
-      gap: 10px;
-      margin-top: 10px;
-      font-size: 14px;
-      color: #000;
-    }
-
-    .checkbox-group input[type="checkbox"] {
-      width: 18px;
-      height: 18px;
-      cursor: pointer;
-      accent-color: #000; /* צבע ה-V בשחור */
-    }
-
-    .privacy-text {
-      text-align: right; /* טקסט בעברית מיושר לימין */
-      direction: rtl;
-    }
-
-    /* כפתור Submit */
-    .submit-container {
-      display: flex;
-      justify-content: flex-end; /* מיושר לימין */
-      margin-top: 20px;
-    }
-
-    .submit-btn {
-      background-color: #000;
-      color: #fff;
-      border: none;
-      padding: 15px 60px; /* רחב */
-      border-radius: 50px; /* גלולה */
-      font-size: 16px;
-      font-family: 'Lato', sans-serif;
-      font-weight: 400;
-      cursor: pointer;
-      transition: opacity 0.3s;
-    }
-
-    .submit-btn:hover {
-      opacity: 0.8;
-    }
-
-    /* FOOTER */
-    footer {
-      margin-top: 100px;
-      padding: 40px 0;
-      text-align: center;
-      border-top: 1px solid #eee;
-      font-size: 12px;
-      color: #999;
-    }
-
-    /* התאמה לנייד */
-    @media (max-width: 768px) {
-      .form-row-split {
-        flex-direction: column;
-        gap: 40px;
-      }
-      .contact-title { font-size: 36px; }
-      .submit-container { justify-content: center; }
-      .submit-btn { width: 100%; }
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
   <header>
     <div class="logo">
-      <img src="logo.png" alt="PÉDANT Cosmetic Logo">
+      <a href="index.html"><img src="images/logo.png" alt="PÉDANT Cosmetic Logo"></a>
     </div>
 
     <nav>
@@ -198,12 +24,12 @@
         <li><a href="catalog.html">CATALOG</a></li>
         <li><a href="about.html">ABOUT</a></li>
         <li><a href="contact.html">CONTACT</a></li>
-        <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
         <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+        <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
         <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li><a href="cart.html"><img src="cart.png" class="cart-icon" alt="Cart"></a></li>
+        <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
       </ul>
     </nav>
   </header>
@@ -249,10 +75,47 @@
     </form>
   </div>
 
-  <footer>
-    <p>&copy; 2025 PÉDANT Cosmetic</p>
-  </footer>
+  <footer class="site-footer">
+  <div class="footer-wrapper">
 
-  <script src="auth.js"></script>
+    <!-- לוגו באמצע -->
+    <div class="footer-logo-area">
+      <img src="images/logo.png" class="footer-logo" alt="Pédant Cosmetic Logo">
+    </div>
+
+    <!-- קו הפרדה -->
+    <div class="footer-line"></div>
+
+    <!-- שתי העמודות עם קו אנכי -->
+    <div class="footer-columns">
+
+      <!-- עמודת הצהרות -->
+      <div class="footer-col-right" dir="rtl">
+        <p>הצהרת נגישות</p>
+        <p>הצהרת פרטיות</p>
+      </div>
+
+      <!-- קו ביניים אנכי -->
+      <div class="footer-middle-line"></div>
+
+      <!-- עמודת מייל + טלפון -->
+      <div class="footer-col-left">
+        <p>pedantcosmetic@gmail.com</p>
+        <p>Tel: 0546429448</p>
+      </div>
+
+    </div>
+
+    <!-- אייקון אינסטגרם במרכז -->
+    <div class="footer-social">
+      <a href="https://www.instagram.com/merav_lavie_pedant?igsh=NHlvdTgxNm9peXd6" target="_blank">
+        <img src="images/instagram.png" class="footer-instagram" alt="Instagram">
+      </a>
+    </div>
+
+  </div>
+</footer>
+
+  <script src="JavaScript/auth.js"></script>
 </body>
 </html>
