--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
   <title>FAQ – PÉDANT Cosmetic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Lato:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Pédant Cosmetic Logo">
+        <a href="index.html"><img src="images/logo.png" alt="PÉDANT Cosmetic Logo"></a>
       </div>
 
       <nav>
@@ -20,13 +20,13 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="catalog.html">CATALOG</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="faq.html">FAQ</a></li>
           <li><a href="contact.html">CONTACT</a></li>
-          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
           <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
           <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
-          <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
+          <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
         </ul>
       </nav>
     </header>
@@ -81,7 +81,7 @@
     <footer class="site-footer">
       <div class="footer-wrapper">
         <div class="footer-logo-area">
-          <img src="logo.png" class="footer-logo" alt="Pédant Cosmetic Logo">
+          <img src="images/logo.png" class="footer-logo" alt="Pédant Cosmetic Logo">
         </div>
         <div class="footer-line"></div>
         <div class="footer-columns">
@@ -97,7 +97,7 @@
         </div>
         <div class="footer-social">
           <a href="https://www.instagram.com/merav_lavie_pedant?igsh=NHlvdTgxNm9peXd6" target="_blank">
-            <img src="instagram.png" class="footer-instagram" alt="Instagram">
+            <img src="images/instagram.png" class="footer-instagram" alt="Instagram">
           </a>
         </div>
       </div>
@@ -105,6 +105,7 @@
 
   </div>
 
+  <script src="JavaScript/auth.js"></script>
   <script>
     // סקריפט פשוט לפתיחת/סגירת שאלות
     document.querySelectorAll('.faq-item').forEach(item => {
