--- a/renew.html
+++ b/renew.html
@@ -4,22 +4,7 @@
   <meta charset="UTF-8">
   <title>RENEW Products</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    .add-to-cart-btn {
-      background-color: black;
-      color: white;
-      border: none;
-      padding: 8px 16px;
-      border-radius: 20px;
-      margin-top: 10px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .add-to-cart-btn:hover {
-      background-color: #333;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -27,7 +12,7 @@
 
     <header>
       <div class="logo">
-        <img src="logo.png" alt="Pédant Cosmetic Logo" style="height:60px;">
+        <a href="index.html"><img src="images/logo.png" alt="PÉDANT Cosmetic Logo"></a>
       </div>
 
       <nav>
@@ -35,13 +20,13 @@
           <li><a href="index.html">HOME</a></li>
           <li><a href="catalog.html">CATALOG</a></li>
           <li><a href="about.html">ABOUT</a></li>
-          <li><a href="#contact">CONTACT</a></li>
-          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+          <li><a href="faq.html">FAQ</a></li>
           <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
           <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
           <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="cart.html"><img src="cart.png" class="cart-icon"></a></li>
+          <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
         </ul>
       </nav>
     </header>
@@ -57,9 +42,9 @@
 
   </div>
 
-  <script src="auth.js"></script>
-  <script src="products.js"></script>
-  <script src="cart.js"></script>
+  <script src="JavaScript/auth.js"></script>
+  <script src="JavaScript/products.js"></script>
+  <script src="JavaScript/cart.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       renderProducts('renew');
