--- a/biopeptix.html
+++ b/biopeptix.html
@@ -2,7 +2,7 @@
 <html lang="he" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>dermalosophy Products</title>
+  <title>Biopeptix Products – PÉDANT Cosmetic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&family=Lato:wght@300;400&display=swap" rel="stylesheet">
   
@@ -10,34 +10,33 @@
 </head>
 
 <body>
+
+  <header>
+    <div class="logo">
+      <a href="index.html"><img src="images/logo.png" alt="PÉDANT Cosmetic Logo"></a>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="catalog.html">CATALOG</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
+        <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+        <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+        <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
+        <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
+      </ul>
+    </nav>
+  </header>
+
   <div class="site-wrapper">
-
-    <header>
-      <div class="logo">
-        <a href="index.html"><img src="images/logo.png" alt="PÉDANT Cosmetic Logo"></a>
-      </div>
-
-      <nav>
-        <ul>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="catalog.html">CATALOG</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
-          <li><a href="faq.html">FAQ</a></li>
-          <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
-          <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
-          <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
-          <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
-          <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
-        </ul>
-      </nav>
-    </header>
-
     <main class="catalog-page">
-      <h1 class="catalog-title">dermalosophy Products</h1>
-      <p class="catalog-subtitle">Advanced skincare by dermalosophy</p> <div class="brand-products"></div>
+      <h1 class="catalog-title">Biopeptix Products</h1>
+      <p class="catalog-subtitle">Advanced skincare by Biopeptix</p> <div class="brand-products"></div>
     </main>
-
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
