--- a/checkout.html
+++ b/checkout.html
@@ -164,21 +164,22 @@
 
   <nav>
     <ul>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="catalog.html">CATALOG</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>
-        <li><a href="faq.html">FAQ</a></li>
-        <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
-        <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
-        <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
-        <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
-        <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="catalog.html">CATALOG</a></li>
+      <li><a href="about.html">ABOUT</a></li>
+      <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="faq.html">FAQ</a></li>
+      <li id="nav-login" style="display:none;"><a href="login.html">LOGIN</a></li>
+      <li id="nav-signup" style="display:none;"><a href="signup.html">SIGN UP</a></li>
+      <li id="nav-profile-item" style="display:none;"><a href="profile.html">PROFILE</a></li>
+      <li id="nav-logout" style="display:none;"><a href="#" onclick="logout(event)">LOGOUT</a></li>
+      <li><a href="cart.html"><img src="images/cart.png" class="cart-icon" alt="Cart"></a></li>
     </ul>
   </nav>
 </header>
 
-<div class="checkout-container">
+<div class="site-wrapper">
+  <div class="checkout-container">
   
   <div class="checkout-col">
     <h2>Billing Details</h2>
@@ -215,6 +216,7 @@
     </div>
   </div>
 
+  </div>
 </div>
 
   <footer class="site-footer">
