--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,8 @@
     </nav>
   </header>
 
-  <div class="contact-wrapper">
+  <div class="site-wrapper">
+    <div class="contact-wrapper">
     <h1 class="contact-title">Contact us</h1>
 
     <form class="contact-form">
@@ -74,6 +75,7 @@
 
     </form>
   </div>
+</div>
 
   <footer class="site-footer">
   <div class="footer-wrapper">
