--- a/biopeptix.html
+++ b/biopeptix.html
@@ -149,7 +149,7 @@
           <div class="product-info-capsule">
             <span class="product-brand-capsule">${p.brand} | ${p.category}</span>
             <h3 class="product-title-capsule">${p.name}</h3>
-            <div class="product-price-capsule">€${p.price.toFixed(2)}</div>
+            <div class="product-price-capsule">NIS ${p.price.toFixed(2)}</div>
             <button onclick="addToCart(${p.id})" class="add-to-bag-capsule">ADD TO BAG</button>
           </div>
         </div>
