--- a/cart.html
+++ b/cart.html
@@ -128,11 +128,11 @@
           <span class="summary-title">Summary</span>
           <div class="summary-row">
             <span>SUBTOTAL</span>
-            <span id="cart-subtotal-val">€0.00</span>
+            <span id="cart-subtotal-val">NIS 0.00</span>
           </div>
           <div class="summary-row" id="discount-row" style="display: none; color: hsla(var(--foreground), 0.4);">
             <span>PROMO DISCOUNT</span>
-            <span id="cart-discount-val">-€0.00</span>
+            <span id="cart-discount-val">-NIS 0.00</span>
           </div>
           
           <div class="coupon-section">
@@ -144,7 +144,7 @@
 
           <div class="summary-row total">
             <span>TOTAL</span>
-            <span id="cart-total-final">€0.00</span>
+            <span id="cart-total-final">NIS 0.00</span>
           </div>
 
           <a href="checkout.html" class="btn-checkout-v2">PROCEED TO CHECKOUT</a>
