--- a/checkout.html
+++ b/checkout.html
@@ -115,7 +115,7 @@
           
           <div class="total-row">
             <span>TOTAL</span>
-            <span id="total-price">€0</span>
+            <span id="total-price">NIS 0</span>
           </div>
         </div>
       </div>
