--- a/profile.html
+++ b/profile.html
@@ -109,6 +109,19 @@
           <button class="btn-profile btn-logout-outline" onclick="logout(event)">Logout</button>
         </div>
       </div>
+
+      <!-- Previous Orders Section -->
+      <div class="profile-header" style="margin-top: 8rem; margin-bottom: 3rem;">
+        <span class="luxury-subheading">ARCHIVE</span>
+        <h2 class="luxury-display" style="font-size: 2.5rem;">Order History</h2>
+      </div>
+
+      <div id="orders-list">
+        <!-- Orders will be injected here -->
+        <div class="profile-card-luxury" style="text-align: center; padding: 4rem; opacity: 0.4;">
+          <p style="font-size: 0.9rem; letter-spacing: 0.1em;">No previous orders found.</p>
+        </div>
+      </div>
     </div>
   </main>
 
